# innerlife

./: .gitignore  CLOSED_LOOP_VALIDATION.md  LICENSE  PHASE0_VALIDATION.md  README.md  V1_VALIDATION.md  V2_1_VALIDATION.md  V2_2_VALIDATION.md  V2_3_VALIDATION.md  V2_VALIDATION.md  pyproject.toml
.github/workflows/: test.yml
config/: com.claracore.innerlife.daemon.plist.template  com.claracore.innerlife.web.plist.template  innerlife.env.example  io.innerlife.daemon.plist.template  io.innerlife.web.plist.template
docs/: AUTONOMOUS_EXPERIENCE_V2.md  CONVERGENCE_V2_3.md  SHARE_SCHEDULER_V2_2.md
examples/: closed_loop_conversation.json  quiet_conversation.json  real_smoke_afterthought.json
innerlife/: __init__.py  autonomous.py  cli.py  config.py  convergence.py  daemon.py  delivery.py  digest.py  evaluator.py  integrations.py  llm.py  models.py  scenarios.py  service.py  session.py  sharing.py  storage.py
profiles/: clara.json  example-agent.json  lara.json
prompts/: convergence.md  digest.md  exploration_reflect.md  exploration_select.md  session_reflection.md  share_decision.md
scenarios/: phase0_cases.jsonl
scripts/: install_launchd.sh  run_daemon.sh  run_mcp.sh  run_web.sh  uninstall_launchd.sh
server/: __init__.py  app.py  mcp.py  mcp_server.py  test_mcp_smoke.py
tests/: conftest.py  test_autonomous.py  test_cli.py  test_convergence.py  test_daemon.py  test_digest.py  test_evaluator.py  test_http.py  test_integrations.py  test_llm.py  test_restart_recovery.py  test_scenarios.py  test_session_lifecycle.py  test_sharing.py  test_storage.py
(+1 files in other folders)
